--- a/src/components/InformationPanel/InformationPanel.less
+++ b/src/components/InformationPanel/InformationPanel.less
@@ -21,6 +21,7 @@
     .InformationPanel__mid,
     .InformationPanel__right {
         padding: @panelPadding;
+        max-width: 500px;
         flex: 1;
 
         .typo-undertittel {
