--- a/src/components/MainContent/MainContent.less
+++ b/src/components/MainContent/MainContent.less
@@ -2,5 +2,4 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    max-width: 2060px;
 }
