--- a/src/components/Timeline/Timeline.less
+++ b/src/components/Timeline/Timeline.less
@@ -8,10 +8,9 @@
 
 .Timeline {
     width: 100%;
-    // min-width: 800px;
-    overflow-x: scroll;
     display: flex;
     padding: 0;
+    overflow: hidden;
 }
 
 hr {
